compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__records__record_accessor_multiple_variants.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub record Person {\n    Teacher(name: String, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, title: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }

----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

export class Teacher extends $CustomType {
  constructor(name, title) {
    super();
    this.name = name;
    this.title = title;
  }
}

export class Student extends $CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}

export function get_name(person) {
  return person.name;
}
