compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__records__record_accessor_multiple_with_first_position_different_types.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub record Person {\n    Teacher(name: Nil, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_age(person: Person) { person.age }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: Nil, age: Int)
    Student(name: String, age: Int)
}
pub fn get_age(person: Person) { person.age }

----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

export class Teacher extends $CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}

export class Student extends $CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}

export function get_age(person) {
  return person.age;
}
